--- a/learning_log/learning_logs/templates/learning_logs/topics.html
+++ b/learning_log/learning_logs/templates/learning_logs/topics.html
@@ -6,7 +6,7 @@
 
   <ul>
     {% for topic in topics %}
-      <li>a href="{% url 'learning_logs:topic' topic.id %}">
+      <li><a href="{% url 'learning_logs:topic' topic.id %}">
           {{ topic.text }}</a>
       </li>
     {% empty %}
